--- a/data/inetradio/Makefile.am
+++ b/data/inetradio/Makefile.am
@@ -1,3 +1,5 @@
 installdir = $(CONFIGDIR)
 
-install_DATA = radio-favorites.xml radio-stations.xml
+install_DATA = \
+	radio-favorites.xml \
+	radio-stations.xml
