--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -1,8 +1,10 @@
 SUBDIRS = \
+	config \
 	control \
 	fonts \
 	icons \
 	inetradio \
+	initial \
 	iso-codes \
 	license \
 	locale \
@@ -12,24 +14,9 @@ SUBDIRS = \
 	themes \
 	webradio \
 	webtv \
-	y-web
+	y-web \
+	zapit
 
 if BOXTYPE_TRIPLE
 SUBDIRS += lcd
 endif
-
-configdir = $(CONFIGDIR)
-
-config_DATA = \
-	bad_package_pattern.list.sample \
-	cables.xml \
-	encoding.conf \
-	epglanguages.conf \
-	myservices.xml \
-	providermap.xml \
-	satellites.xml \
-	settingsupdate.conf \
-	terrestrial.xml \
-	tobackup.conf
-install-data-hook:
-	$(INSTALL) -d $(DESTDIR)/$(CONFIGDIR)/zapit
