- move control scripts from data/neutrino-scripts to data/control

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -1,11 +1,11 @@
 SUBDIRS = \
+	control \
 	fonts \
 	icons \
 	inetradio \
 	iso-codes \
 	license \
 	locale \
-	neutrino-scripts \
 	pictures \
 	policy \
 	scripts \
