--- a/configure.ac
+++ b/configure.ac
@@ -351,6 +351,7 @@ AC_SUBST(BLURAY_LIBS)
 AC_OUTPUT([
 Makefile
 data/Makefile
+data/control/Makefile
 data/fonts/Makefile
 data/icons/Makefile
 data/icons/buttons/Makefile
@@ -379,7 +380,6 @@ data/lcd/clock/Makefile
 data/lcd/icons/Makefile
 data/license/Makefile
 data/locale/Makefile
-data/neutrino-scripts/Makefile
 data/pictures/Makefile
 data/pictures/backgrounds/Makefile
 data/pictures/screensaver/Makefile
