add own scripts to (auto)migration

--- a/data/control/Makefile.am
+++ b/data/control/Makefile.am
@@ -19,4 +19,8 @@ install_SCRIPTS = \
 	scan.start \
 	scan.stop \
 	standby.on \
-	standby.off
+	standby.off \
+	volume.down \
+	volume.up \
+	mute.off \
+	mute.on
