--- a/configure.ac
+++ b/configure.ac
@@ -229,6 +229,15 @@ if test "$enable_webif" = "yes"; then
 	AC_DEFINE(ENABLE_WEBIF,1,[include webif])
 fi
 
+AC_ARG_ENABLE(dynamicdemux,
+	AS_HELP_STRING(--enable-dynamicdemux,use dynamic demux),
+	,[enable_dynamicdemux=yes])
+
+AM_CONDITIONAL(DYNAMIC_DEMUX,test "$enable_dynamicdemux" = "yes")
+if test "$enable_dynamicdemux" = "yes"; then
+	AC_DEFINE(DYNAMIC_DEMUX,1,[use dynamic demux])
+fi
+
 AC_ARG_ENABLE(tangos,
 	AS_HELP_STRING(--disable-tangos,disable tangos infoviewer),
 	,[enable_tangos=yes])
