add configure option (--diable-arm-acc) to disable arm hardware acceleration

--- a/configure.ac
+++ b/configure.ac
@@ -238,6 +238,15 @@ if test "$enable_dynamicdemux" = "yes"; then
 	AC_DEFINE(DYNAMIC_DEMUX,1,[use dynamic demux])
 fi
 
+AC_ARG_ENABLE(arm-acc,
+	AS_HELP_STRING(--disable-arm-acc,disable arm hardware acceleration),
+	,[enable_arm_acc=yes])
+
+AM_CONDITIONAL(ENABLE_ARM_ACC,test "$enable_arm_acc" = "yes")
+if test "$enable_arm_acc" = "yes"; then
+	AC_DEFINE(ENABLE_ARM_ACC,1,[enable arm hardware acceleration])
+fi
+
 AC_ARG_ENABLE(tangos,
 	AS_HELP_STRING(--disable-tangos,disable tangos infoviewer),
 	,[enable_tangos=yes])
