--- a/data/y-web/images/Makefile.am
+++ b/data/y-web/images/Makefile.am
@@ -80,6 +80,9 @@ install_DATA =	accept.png \
 		x_red.png \
 		zap.png
 
+# fallback rc
+install_DATA += rc_mutant_hd51.png
+
 if BOXTYPE_COOL
 install_DATA += rc_cst_v1.jpg \
 		rc_cst_v2.png \
@@ -90,8 +93,7 @@ install_DATA += rc_cst_v1.jpg \
 endif
 
 if BOXMODEL_HD51
-install_DATA += rc_ax_hd51.png \
-		rc_mutant_hd51.png
+install_DATA += rc_ax_hd51.png
 endif
 
 if BOXMODEL_H7
