move weather settings to main settings menu

--- a/src/gui/Makefile.am
+++ b/src/gui/Makefile.am
@@ -110,7 +110,8 @@ libneutrino_gui_a_SOURCES = \
 
 if ENABLE_TANGOS
 libneutrino_gui_a_SOURCES += \
-	infoviewer_tc.cpp
+	infoviewer_tc.cpp \
+	weather_setup.cpp
 else
 libneutrino_gui_a_SOURCES += \
 	infoviewer.cpp \
