--- a/configure.ac
+++ b/configure.ac
@@ -425,6 +425,9 @@ data/themes/Neutrino-3.0/icons/buttons/Makefile
 data/themes/Olive-3.0/Makefile
 data/themes/Olive-3.0/icons/Makefile
 data/themes/Olive-3.0/icons/buttons/Makefile
+data/themes/TangoCash/Makefile
+data/themes/TangoCash/icons/Makefile
+data/themes/TangoCAsh/icons/buttons/Makefile
 data/webradio/Makefile
 data/webtv/Makefile
 data/y-web/Makefile
