--- a/data/themes/Makefile.am
+++ b/data/themes/Makefile.am
@@ -2,7 +2,8 @@ SUBDIRS = \
 	Grey-3.0/icons/buttons \
 	Grey-Blue/icons/buttons \
 	Neutrino-3.0/icons/buttons \
-	Olive-3.0/icons/buttons
+	Olive-3.0/icons/buttons \
+	TangoCash/icons/buttons
 
 installdir = $(THEMESDIR)
 
