--- a/configure.ac
+++ b/configure.ac
@@ -231,7 +231,7 @@ fi
 
 AC_ARG_ENABLE(dynamicdemux,
 	AS_HELP_STRING(--enable-dynamicdemux,use dynamic demux),
-	,[enable_dynamicdemux=yes])
+	,[enable_dynamicdemux=no])
 
 AM_CONDITIONAL(DYNAMIC_DEMUX,test "$enable_dynamicdemux" = "yes")
 if test "$enable_dynamicdemux" = "yes"; then
