--- a/src/gui/Makefile.am
+++ b/src/gui/Makefile.am
@@ -148,7 +148,8 @@ endif
 
 if ENABLE_GRAPHLCD
 libneutrino_gui_a_SOURCES += \
-	glcdsetup.cpp
+	glcdsetup.cpp \
+	glcdthemes.cpp
 endif
 
 if BOXTYPE_COOL
