fix directory for epgmap.xml

--- a/data/zapit/Makefile.am
+++ b/data/zapit/Makefile.am
@@ -3,6 +3,7 @@ installdir = $(CONFIGDIR)/zapit
 install_DATA = \
 	myservices.xml \
 	bouquets.xml \
+	epgmap.xml \
 	services.xml \
 	ubouquets.xml
 
