add ait scan (hbbtvurls) to /tmp/ait.txt for now

--- a/src/zapit/src/Makefile.am
+++ b/src/zapit/src/Makefile.am
@@ -25,6 +25,7 @@ libzapit_a_SOURCES = \
 	frontend.cpp \
 	getservices.cpp \
 	pat.cpp \
+	scanait.cpp \
 	scanbat.cpp \
 	scan.cpp \
 	scannit.cpp \
