--- a/data/config/tobackup.conf
+++ b/data/config/tobackup.conf
@@ -4,3 +4,17 @@
 # /var/etc/rcS.local			# an example for a single file
 # /var/tuxbox/config/tuxtxt/		# an example for a complete directory
 /var/tuxbox/config/			# old default
+/var/tuxbox/fonts
+/var/tuxbox/control
+/var/tuxbox/webradio
+/var/tuxbox/webtv
+/var/emu
+/var/keys
+/home
+/var/etc/ssl/certs/*.pem
+/var/etc/network/interfaces
+/var/etc/hostname
+/var/etc/blacklist*
+/var/etc/ci_auth*
+/var/tuxbox/plugins/fb.conf
+/var/tuxbox/plugins/fb.csv
