--- a/src/gui/Makefile.am
+++ b/src/gui/Makefile.am
@@ -61,9 +61,10 @@ libneutrino_gui_a_SOURCES = \
 	filebrowser.cpp \
 	followscreenings.cpp \
 	imageinfo.cpp \
-	imdb.cpp \
 	info_menue.cpp \
 	keybind_setup.cpp \
+	mdb-imdb.cpp \
+	mdb-tmdb.cpp \
 	mediaplayer.cpp \
 	mediaplayer_setup.cpp \
 	miscsettings_menu.cpp \
@@ -93,7 +94,6 @@ libneutrino_gui_a_SOURCES = \
 	subchannel_select.cpp \
 	themes.cpp \
 	timeosd.cpp \
-	tmdb.cpp \
 	update.cpp \
 	update_menue.cpp \
 	update_settings.cpp \
