- icons: rename icon_movieplayer.png and icon_ytplay.png
Conflicts:
	data/icons/headers/Makefile.am

Signed-off-by: Thilo Graf <dbt@novatux.de>

--- a/data/icons/headers/Makefile.am
+++ b/data/icons/headers/Makefile.am
@@ -10,7 +10,6 @@ install_DATA = \
 	games.png \
 	icon_blue.png \
 	icon_green.png \
-	icon_movieplayer.png \
 	icon_red.png \
 	icon_yellow.png \
 	information.png \
@@ -19,6 +18,7 @@ install_DATA = \
 	lcd.png \
 	lock.png \
 	mainmenue.png \
+	movieplayer.png \
 	mp3.png \
 	multimedia.png \
 	network.png \
