- introduce configurable ZAPITDIR

--- a/data/y-web/Makefile.am
+++ b/data/y-web/Makefile.am
@@ -109,6 +109,7 @@ install-data-hook:
 	find $(DESTDIR)$(PRIVATE_HTTPDDIR)/ -type f -print0 | xargs --no-run-if-empty -0 \
 		sed -i \
 			-e 's|%(CONFIGDIR)|$(CONFIGDIR)|g' \
+			-e 's|%(ZAPITDIR)|$(ZAPITDIR)|g' \
 			-e 's|%(DATADIR)|$(DATADIR)|g' \
 			-e 's|%(CONTROLDIR)|$(CONTROLDIR)|g' \
 			-e 's|%(CONTROLDIR_VAR)|$(CONTROLDIR_VAR)|g' \
