--- a/configure.ac
+++ b/configure.ac
@@ -2,7 +2,7 @@ define(ver_major, 3)
 define(ver_minor, 12)
 define(ver_micro, 0)
 
-AC_INIT(Neutrino-MP, ver_major.ver_minor.ver_micro)
+AC_INIT(Neutrino-Tangos, ver_major.ver_minor.ver_micro)
 AM_INIT_AUTOMAKE([nostdinc foreign])
 m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES])
 
