remove unsupported boxes

--- a/configure.ac
+++ b/configure.ac
@@ -93,10 +93,6 @@ TUXBOX_APPS_LIB_PKGCONFIG(SWRESAMPLE,libswresample)
 
 AM_CONDITIONAL(USE_TREMOR, test "$TREMOR" = "yes")
 
-if test "$BOXTYPE" = "tripledragon"; then
-	TUXBOX_APPS_LIB_PKGCONFIG(DIRECTFB, directfb)
-fi
-
 # TUXBOX_APPS_LIB_PKGCONFIG(OPENSSL,openssl)
 TUXBOX_APPS_LIB_PKGCONFIG(CURL,libcurl)
 
@@ -146,13 +142,8 @@ fi
 
 if test "$BOXTYPE" = "coolstream" ||
    test "$BOXTYPE" = "armbox" ||
-   test "$BOXTYPE" = "generic" ||
-   test "$BOXTYPE" = "tripledragon" ||
-   test "$BOXTYPE" = "duckbox" ||
-   test "$BOXTYPE" = "armbox" ||
    test "$BOXTYPE" = "mipsbox" ||
-   test "$BOXTYPE" = "spark7162" ||
-   test "$BOXTYPE" = "spark"; then
+   test "$BOXTYPE" = "generic"; then
 	AC_DEFINE(SCREENSHOT, 1, [Define to 1 if the platform supports screenshots])
 fi
 
