--- a/src/gui/Makefile.am
+++ b/src/gui/Makefile.am
@@ -122,18 +122,6 @@ libneutrino_gui_a_SOURCES += \
 	quadpip_setup.cpp
 endif
 
-if BOXTYPE_SPARK
-libneutrino_gui_a_SOURCES += \
-	3dsetup.cpp \
-	psisetup.cpp
-endif
-
-if BOXTYPE_DUCKBOX
-libneutrino_gui_a_SOURCES += \
-	3dsetup.cpp \
-	psisetup.cpp
-endif
-
 if BOXTYPE_ARMBOX
 libneutrino_gui_a_SOURCES += \
 	psisetup.cpp \
@@ -175,16 +163,12 @@ libneutrino_gui_a_SOURCES += \
 endif
 
 libneutrino_gui2_a_SOURCES = \
+	cam_menu.cpp \
 	color.cpp \
 	hdd_menu.cpp \
 	infoclock.cpp \
 	kerneloptions.cpp \
 	motorcontrol.cpp
-
-if !BOXTYPE_SPARK
-libneutrino_gui2_a_SOURCES += \
-	cam_menu.cpp
-endif
 
 if ENABLE_UPNP
 libneutrino_gui2_a_SOURCES += \
