rename BOXMODEL_CS_HDx -> BOXMODEL_CST_HDx

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -65,7 +65,7 @@ rcsim_SOURCES = rcsim.c rcsim.h
 
 AM_CPPFLAGS += -D_FILE_OFFSET_BITS=64
 
-if BOXMODEL_CS_HD2
+if BOXMODEL_CST_HD2
 MTDUTILSLIBS = \
 	system/mtdutils/libneutrino_system_mtdutils.a \
 	system/mtdutils/lib/libneutrino_system_mtdutils_lib.a
@@ -162,7 +162,7 @@ neutrino_LDADD += \
 	$(top_builddir)/lib/libupnpclient/libtuxbox-upnpclient.a
 endif
 
-if BOXTYPE_COOL
+if BOXTYPE_CST
 neutrino_LDADD += \
 	$(top_builddir)/lib/hardware/coolstream/libhwcaps.a
 if ENABLE_LIBCOOLSTREAM_STATIC
@@ -172,13 +172,13 @@ else
 neutrino_LDADD += -lcoolstream-mt -lca-sc
 endif
 
-if BOXMODEL_CS_HD2
+if BOXMODEL_CST_HD2
 neutrino_LDADD += -lca-ci -llnxtmvssUsr -llnxUKAL -llnxplatUsr -llnxtmasUsr -llnxdvbciUsr -llnxpvrUsr -llnxcssUsr -llnxnotifyqUsr -ltmpvrDataManager-cst -ltmpvrIndexStorage -llnxscsUsr
 else
 neutrino_LDADD += -lnxp
 endif
 
-if BOXMODEL_CS_HD2
+if BOXMODEL_CST_HD2
 neutrino_LDADD += -liconv
 endif
 
@@ -203,7 +203,7 @@ neutrino_LDADD += \
 	-L/opt/vc/lib/ -lbcm_host -lvcos -lvchiq_arm -lpthread -lrt
 endif
 
-if BOXTYPE_COOL
+if BOXTYPE_CST
 bin_PROGRAMS += shutdown_helper
 shutdown_helper_SOURCES = shutdown_helper.c
 endif
