- move weather locations to xml file

--- a/data/config/Makefile.am
+++ b/data/config/Makefile.am
@@ -9,4 +9,5 @@ install_DATA = \
 	satellites.xml \
 	settingsupdate.conf \
 	terrestrial.xml \
-	tobackup.conf
+	tobackup.conf \
+	weather_locations.xml
