- weather: introduce weather_favorites.xml
Signed-off-by: Thilo Graf <dbt@novatux.de>

--- a/data/config/Makefile.am
+++ b/data/config/Makefile.am
@@ -9,5 +9,4 @@ install_DATA = \
 	satellites.xml \
 	settingsupdate.conf \
 	terrestrial.xml \
-	tobackup.conf \
-	weather_locations.xml
+	tobackup.conf
