add display support for osmio4k+
use --enable-lcd as configure option

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -22,6 +22,11 @@ SUBDIRS += \
 	libiw
 endif
 
+if ENABLE_LCD
+SUBDIRS += \
+	liblcddisplay
+endif
+
 if BOXTYPE_CST
 SUBDIRS += \
 	hardware/coolstream
