--- a/configure.ac
+++ b/configure.ac
@@ -156,6 +156,30 @@ if test "$enable_wifi" = "yes"; then
 	AC_DEFINE(ENABLE_WIFI, 1, [include WiFi support])
 fi
 
+# lcd
+AC_ARG_ENABLE(lcd,
+	AS_HELP_STRING(--enable-lcd,include lcd support),
+	,[enable_lcd=no])
+AM_CONDITIONAL(ENABLE_LCD,test "$enable_lcd" = "yes")
+
+if test "$enable_lcd" = "yes"; then
+AC_DEFINE(ENABLE_LCD,1,[include lcd support])
+fi
+
+# lcd update
+AM_CONDITIONAL(LCD_UPDATE,test "$enable_lcd_update" = "yes")
+
+if test "$enable_lcd" = "yes"; then
+AC_DEFINE(LCD_UPDATE,1,[include lcd update support])
+fi
+
+# lcdapi
+AM_CONDITIONAL(ENABLE_LCDAPI,test "$enable_lcd" = "yes")
+
+if test "$enable_lcd" = "yes"; then
+AC_DEFINE(ENABLE_LCDAPI,1,[include lcd api support])
+fi
+
 AC_ARG_ENABLE(graphlcd,
 	AS_HELP_STRING([--enable-graphlcd], [enable GraphLCD support]),
 	,[enable_graphlcd=no])
@@ -465,6 +489,7 @@ lib/connection/Makefile
 lib/hardware/coolstream/Makefile
 lib/jsoncpp/Makefile
 lib/libconfigfile/Makefile
+lib/liblcddisplay/Makefile
 lib/libdvbsub/Makefile
 lib/libeventserver/Makefile
 lib/libiw/Makefile
