--- a/src/driver/Makefile.am
+++ b/src/driver/Makefile.am
@@ -43,6 +43,10 @@ libneutrino_driver_a_SOURCES = \
 	streamts.cpp \
 	volume.cpp
 
+if ENABLE_LCD
+AM_CPPFLAGS += -I$(top_srcdir)/lib/liblcddisplay
+endif
+
 if ENABLE_LCD4LINUX
 libneutrino_driver_a_SOURCES += \
 	lcd4l.cpp
@@ -77,11 +81,19 @@ libneutrino_driver_a_SOURCES += \
 endif
 
 if BOXTYPE_ARMBOX
+if ENABLE_LCD
+libneutrino_driver_a_SOURCES += \
+	fb_generic.cpp \
+	fb_accel.cpp \
+	fb_accel_arm.cpp \
+	lcdd.cpp
+else
 libneutrino_driver_a_SOURCES += \
 	fb_generic.cpp \
 	fb_accel.cpp \
 	fb_accel_arm.cpp \
 	simple_display.cpp
+endif
 endif
 
 if BOXTYPE_MIPSBOX
