prepare for x86/x64 build

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -12,8 +12,12 @@ SUBDIRS = \
 	libdvbsub \
 	luaclient \
 	libdvbapi \
-	libdvbci \
+	libdvbci
+
+if !BOXTYPE_GENERIC
+SUBDIRS += \
 	libeplayer3
+endif
 
 if ENABLE_UPNP
 SUBDIRS += \
