--- a/src/driver/Makefile.am
+++ b/src/driver/Makefile.am
@@ -59,10 +59,14 @@ endif
 
 if BOXTYPE_GENERIC
 libneutrino_driver_a_SOURCES += \
+	glthread.cpp \
 	fb_generic.cpp \
 	fb_accel.cpp \
 	fb_accel_glfb.cpp \
 	simple_display.cpp
+
+AM_CPPFLAGS += \
+	@GSTREAMER_CFLAGS@
 endif
 
 if BOXTYPE_ARMBOX
