--- a/configure.ac
+++ b/configure.ac
@@ -531,6 +531,7 @@ src/zapit/src/Makefile
 
 # Oled themes
 AC_CONFIG_FILES([
+data/oled/themes/220x176/Default.otheme
 data/oled/themes/400x240/Default.otheme
 data/oled/themes/480x320/Default.otheme
 data/oled/themes/480x320/Advanced.otheme
