--- a/data/oled/themes/Makefile.am
+++ b/data/oled/themes/Makefile.am
@@ -11,6 +11,6 @@ endif
 if BOXMODEL_VUULTIMO4K
 SUBDIRS += 800x480
 endif
-if BOXMODEL_E4HDULTRA
+if BOXMODEL_E4HDULTRA || BOXMODEL_PROTEK4K
 SUBDIRS += 220x176
 endif
