fix last commit

--- a/data/y-web/images/Makefile.am
+++ b/data/y-web/images/Makefile.am
@@ -129,7 +129,11 @@ install_DATA += rc_ax_hd51.png \
 		rc_mutant_hd51.png
 endif
 
-if BOXMODEL_E4HDULTRA || BOXMODEL_PROTEK4K
+if BOXMODEL_E4HDULTRA
+install_DATA += rc_axas_e4hd.png
+endif
+
+if BOXMODEL_PROTEK4K
 install_DATA += rc_axas_e4hd.png
 endif
 
