introduce hdmi_cec to driver

--- a/src/driver/Makefile.am
+++ b/src/driver/Makefile.am
@@ -83,12 +83,14 @@ endif
 if BOXTYPE_ARMBOX
 if ENABLE_LCD
 libneutrino_driver_a_SOURCES += \
+	hdmi_cec.cpp \
 	fb_generic.cpp \
 	fb_accel.cpp \
 	fb_accel_arm.cpp \
 	lcdd.cpp
 else
 libneutrino_driver_a_SOURCES += \
+	hdmi_cec.cpp \
 	fb_generic.cpp \
 	fb_accel.cpp \
 	fb_accel_arm.cpp \
@@ -98,6 +100,7 @@ endif
 
 if BOXTYPE_MIPSBOX
 libneutrino_driver_a_SOURCES += \
+	hdmi_cec.cpp \
 	fb_generic.cpp \
 	fb_accel.cpp \
 	fb_accel_mips.cpp \
