--- a/data/oled/themes/220x176/Makefile.am
+++ b/data/oled/themes/220x176/Makefile.am
@@ -1,7 +1,9 @@
 EXTRA_DIST = \
-	Default.otheme Default.otheme.in
+	Default.otheme Default.otheme.in \
+	TangoCash.otheme TangoCash.otheme.in \
 
 oledthemesdir = $(THEMESDIR)/oled
 
 oledthemes_DATA = \
-	Default.otheme
+	Default.otheme \
+	TangoCash.otheme
