--- a/data/oled/themes/220x176/Makefile.am
+++ b/data/oled/themes/220x176/Makefile.am
@@ -1,6 +1,6 @@
 EXTRA_DIST = \
 	Default.otheme Default.otheme.in \
-	TangoCash.otheme TangoCash.otheme.in \
+	TangoCash.otheme TangoCash.otheme.in
 
 oledthemesdir = $(THEMESDIR)/oled
 
