added Uclan Ustym 4K S2 OTT X

--- a/data/y-web/images/Makefile.am
+++ b/data/y-web/images/Makefile.am
@@ -151,6 +151,10 @@ if BOXMODEL_USTYM4KPRO
 install_DATA += rc_ustym4kpro.png
 endif
 
+if BOXMODEL_USTYM4KS2OTTX
+install_DATA += rc_ustym4kpro.png
+endif
+
 # file manager
 install_DATA +=	chmod.png \
 		copy.gif \
