--- a/lib/libeplayer3/Makefile.am
+++ b/lib/libeplayer3/Makefile.am
@@ -19,7 +19,7 @@ SOURCE_FILES += manager/video.c
 SOURCE_FILES += manager/chapter.c
 SOURCE_FILES += manager/subtitle.c
 SOURCE_FILES += output/graphic_subtitle.c
-SOURCE_FILES += output/output_subtitle.c
+#SOURCE_FILES += output/output_subtitle.c
 SOURCE_FILES += output/output.c
 SOURCE_FILES += output/writer/common/pes.c
 SOURCE_FILES += output/writer/common/misc.c
