switch to simple mpv playback for generic

--- a/lib/libdvbapi/Makefile.am
+++ b/lib/libdvbapi/Makefile.am
@@ -34,8 +34,6 @@ libdvbapi_a_SOURCES += \
 	playback_libeplayer3.cpp
 else
 libdvbapi_a_SOURCES += \
-	playback_gst.cpp
-AM_LDFLAGS += \
-	@GSTREAMER_CFLAGS@
+	playback_pc.cpp
 endif
 
